profile and resume add

--- a/index.html
+++ b/index.html
@@ -837,14 +837,14 @@
     <section id="hero">
         <div class="profile-pic-container">
             <!-- EDITABLE: Replace 'your-profile-picture.jpg' with your actual image path -->
-            <img src="https://via.placeholder.com/180/007bff/FFFFFF?text=Sifat" alt="Rashidul Islam Sifat Profile Picture" class="profile-pic">
+            <img src="/src/NEW Au.png" alt="Rashidul Islam Sifat Profile Picture" class="profile-pic">
         </div>
         <!-- EDITABLE: Update your name and title -->
         <h1>Hi, I'm <span>Rashidul Islam Sifat</span></h1>
         <p>Aspiring Electrical Engineer, Robotics Enthusiast, AI Engineer.</p>
         <p>I'm an EEE student with hands-on experience in electrical systems, circuit design, and robotics, passionate about AI, sustainable energy, and real-world engineering solutions.</p>
         <!-- EDITABLE: Add link to your resume PDF -->
-        <a href="[Link to your Resume PDF]" target="_blank" class="hero-button">Download My Resume <i class="fas fa-download"></i></a>
+        <a href="https://drive.google.com/file/d/1P-3qKDQPKFiw9gSTo4IwDhcWKWWZrSPL/view?usp=sharing" target="_blank" class="hero-button">Download My Resume <i class="fas fa-download"></i></a>
     </section>
 
     <!-- About Section -->
