--- a/index.html
+++ b/index.html
@@ -837,7 +837,7 @@
     <section id="hero">
         <div class="profile-pic-container">
             <!-- EDITABLE: Replace 'your-profile-picture.jpg' with your actual image path -->
-            <img src="NEW Au.png" alt="Rashidul Islam Sifat Profile Picture" class="profile-pic">
+            <img src="NEW Au.png" class="profile-pic">
         </div>
         <!-- EDITABLE: Update your name and title -->
         <h1>Hi, I'm <span>Rashidul Islam Sifat</span></h1>
