--- a/index.html
+++ b/index.html
@@ -1118,6 +1118,14 @@
                 <p class="issuer">Asian Development Bank Institute</p>
                 <p>April 2025</p>
             </div>
+
+            <div class="certification-item">
+                <h3>BEAR Summit 2025 Bangladesh</h3>
+                <p class="issuer">Bear patron Bangladesh National Semiconductor Symposium</p>
+                <p>July 2025</p>
+            </div>
+
+
             <div class="certification-item">
                 <h3>Engineering for New Energy Job Simulation</h3>
                 <p class="issuer">APA Group - Forage</p>
