Facebook Account Link

--- a/index.html
+++ b/index.html
@@ -1203,11 +1203,13 @@
 
         <div class="social-links">
             <!-- EDITABLE: Your LinkedIn Profile -->
-            <a href="https://linkedin.com/in/rashidul-islam-sifat" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/rashidul-sifat?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
             <!-- EDITABLE: Your GitHub Profile (if applicable) -->
-            <a href="[Link to your GitHub Profile]" target="_blank" aria-label="GitHub"><i class="fab fa-github-square"></i></a>
-            <!-- Add other social links if applicable -->
-            <!-- <a href="[Link to your ResearchGate Profile]" target="_blank" aria-label="ResearchGate"><i class="ai ai-researchgate"></i></a> -->
+            <a href="[http://github.com/SIFAT01DUET]" target="_blank" aria-label="GitHub"><i class="fab fa-github-square"></i></a>
+            <!-- EDITABLE: Your ResearchGate Profile -->
+            <!-- <a href="[https://www.researchgate.net/profile/Rashidul-Sifat?ev=hdr_xprf]" target="_blank" aria-label="ResearchGate"><i class="ai ai-researchgate"></i></a> -->
+            <!-- EDITABLE: Your Facebook Profile -->
+            <!-- <a href="[https://www.facebook.com/sifat89duet]" target="_blank" aria-label="Facebook"><i class="ai ai-facebook"></i></a> -->        
         </div>
     </section>
 
