--- a/index.html
+++ b/index.html
@@ -1034,4 +1034,336 @@
             </div>
             <div class="timeline-item">
                 <div class="timeline-content">
-                    <h3>
+                    <h3>Trainee, BGS-Vocational Training Center (BGS-VTC)</h3>
+                    <span class="date">May 2019 – August 2019</span>
+                    <p><strong>Tangail, Dhaka, Bangladesh</strong></p>
+                    <ul>
+                        <li>Developed skills in installation and maintenance of electrical systems.</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="timeline-item">
+                <div class="timeline-content">
+                    <h3>Science (SSC/Equivalent)</h3>
+                    <span class="date">January 2012 – April 2017</span>
+                    <p><strong>Govt. Dhanbari Nawab Institution</strong></p>
+                    <p><strong>CGPA:</strong> 5.00 out of 5.00</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Projects & Achievements Section -->
+    <section id="projects" class="container">
+        <h2 class="section-title">Projects, Research & Achievements</h2>
+        
+        <div class="achievements-container">
+            <h3><i class="fas fa-award"></i> Awards & Key Achievements</h3>
+            <ul>
+                <li>Received the <strong>South Asian Excellence Award 2025</strong> for contributions in youth leadership, innovation, and academic excellence.</li>
+                <li>Represented Bangladesh as a delegate at global forums like the <strong>ASEAN Youth Conference 2025</strong> and <strong>A Day with Global Leaders</strong>.</li>
+                 <li><strong>DUET IUPC 2025:</strong> Actively involved in organizing the inter-university programming contest as part of the DUET Computer Society.</li>
+                <li><strong>Robotics Competitions:</strong> Participated in various robotics challenges, collaborating with teams to build competitive robots for university events.</li>
+                <li><strong>Smart Grid Research:</strong> Engaged in research projects related to developing and implementing smart grid technologies.</li>
+            </ul>
+        </div>
+
+        <h3 class="section-subtitle">Conference Papers & Research</h3>
+        <div class="project-grid">
+            <div class="project-card">
+                <h3><i class="fas fa-microphone-alt"></i> Farmer-Centric AI System</h3>
+                <h4>Oral Presentation at ICSHSD-2025</h4>
+                <p>Presented research on an AI system for socially inclusive smart irrigation and crop monitoring, aimed at enhancing agricultural sustainability and social inclusion.</p>
+                <p class="technologies"><strong>Focus Areas:</strong> AI, IoT, Smart Agriculture, Sustainable Development</p>
+            </div>
+            <div class="project-card">
+                <h3><i class="fas fa-image"></i> AI-Driven Smart Irrigation</h3>
+                <h4>Poster Presentation at ICSHSD-2025</h4>
+                <p>Presented a poster on an AI-driven smart irrigation and crop monitoring system designed to empower rural farmers through technology.</p>
+                 <p class="technologies"><strong>Co-author:</strong> Md. Alamin (BUBT)</p>
+            </div>
+            <div class="project-card">
+                <h3><i class="fas fa-chart-line"></i> Leading the Semiconductor Industry in Bangladesh</h3>
+                 <h4>Completed Research Project at DUET</h4>
+                <p>Developed a comprehensive report examining the viability of Bangladesh's semiconductor sector, based on local strengths, international trends, and economic analysis.</p>
+                <p class="technologies"><strong>Date:</strong> January 2024</p>
+            </div>
+        </div>
+
+        <h3 class="section-subtitle">Featured Technical Projects (Samples)</h3>
+        <div class="project-grid">
+             <div class="project-card">
+                <h3><i class="fas fa-square-root-alt"></i> Custom RISC-V Processor Core Design (Sample)</h3>
+                <p>Designed and implemented a 5-stage pipelined RISC-V processor core in Verilog HDL. Verified functionality using extensive testbenches and simulated with Cadence Incisive (VCS).</p>
+                <p class="technologies"><strong>Technologies:</strong> Verilog HDL, Cadence Incisive (VCS), FPGA (Xilinx Artix-7), Linux CLI</p>
+                <div class="project-links">
+                    <a href="https://github.com/SIFAT01DUET" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+                </div>
+            </div>
+            <div class="project-card">
+                <h3><i class="fas fa-solar-panel"></i> High-Efficiency DC-DC Converter (Sample)</h3>
+                <p>Developed and simulated a Boost Converter for solar energy harvesting. Performed detailed transient, AC, and efficiency analyses using LTspice and MATLAB/Simulink, achieving >90% efficiency.</p>
+                <p class="technologies"><strong>Technologies:</strong> LTspice, MATLAB/Simulink, Power Electronics</p>
+                <div class="project-links">
+                    <a href="https://github.com/SIFAT01DUET" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+                </div>
+            </div>
+            <div class="project-card">
+                <h3><i class="fas fa-robot"></i> Robotics Control System with PID (Sample)</h3>
+                <p>Designed and simulated a PID controller for a wheeled robot's motor control. Implemented in C on an Arduino platform, with performance analysis in MATLAB/Simulink.</p>
+                <p class="technologies"><strong>Technologies:</strong> Arduino, C++, MATLAB/Simulink, Control Systems</p>
+                <div class="project-links">
+                    <a href="https://github.com/SIFAT01DUET" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- NEW Events & Program Summary Section -->
+    <section id="events" class="container">
+        <h2 class="section-title">Events & Program Summary</h2>
+        <div class="events-container">
+            <h3>2025</h3>
+            <ul class="event-list">
+                <li class="event-item">
+                    <span class="event-date">Jan 6</span>
+                    <h4>Workshop: LOR & SOP for Higher Study</h4>
+                    <p><strong>Speaker:</strong> Dr. Syed Mosiur Rahaman Kiron | <strong>Organizer:</strong> ELC DUET</p>
+                </li>
+                <li class="event-item">
+                    <span class="event-date">January</span>
+                    <h4>DUET CRC Career Olympiad & Farewell Program</h4>
+                    <p>Campus-wide career and networking event.</p>
+                </li>
+                <li class="event-item">
+                    <span class="event-date">February</span>
+                    <h4>Career Mastery Seminar: Turning Passion Into Profession</h4>
+                    <p><strong>Speaker:</strong> Anisul Islam (Tech Expert, Finland)</p>
+                </li>
+                 <li class="event-item">
+                    <span class="event-date">May 8</span>
+                    <h4>Seminar on Entrepreneurship & Careers Abroad</h4>
+                    <p><strong>Speaker:</strong> Engr. MD Aminur Islam | <strong>Organizer:</strong> DUET CRC + ASCE</p>
+                </li>
+                 <li class="event-item">
+                    <span class="event-date">Jul 11</span>
+                    <h4>ELC DUET Live: English A Catalyst for Growth</h4>
+                    <p><strong>Speaker:</strong> Ali Md Hossain Prince (UK Consultant)</p>
+                </li>
+                 <li class="event-item">
+                    <span class="event-date">Sep 11</span>
+                    <h4>IEE Career Seminar: Energy Engineering</h4>
+                    <p><strong>Speaker:</strong> Dr. Md. Rafiqul Islam | <strong>Organizer:</strong> IEE DUET</p>
+                </li>
+                 <li class="event-item">
+                    <span class="event-date">Sep 12</span>
+                    <h4>Motivational Speech: Live Up to Your Dreams</h4>
+                    <p><strong>Organizer:</strong> ELC DUET</p>
+                </li>
+                 <li class="event-item">
+                    <span class="event-date">Sep 25–27</span>
+                    <h4>Bangladesh Buildcon & Wood Expo 2025</h4>
+                    <p>Networking with MNCs at ICCB Expo Zone.</p>
+                </li>
+                <li class="event-item">
+                    <span class="event-date">Sep 23-27</span>
+                    <h4>Made in Pakistan Exhibition – Dhaka</h4>
+                    <p>Cross-cultural business & innovation exposure.</p>
+                </li>
+                 <li class="event-item">
+                    <span class="event-date">Sep 27</span>
+                    <h4>Industrial Visit to Top 5 Giants of Bangladesh</h4>
+                    <p><strong>Companies:</strong> Walton, Bashundhara, Nasir, PRAN-RFL, Unilever</p>
+                </li>
+                 <li class="event-item">
+                    <span class="event-date">Ongoing</span>
+                    <h4>Industrial Expo & Job Fair 2025: Organizer Committee Member</h4>
+                    <p>Part of the organizing committee for DUET’s official platform for industry networking.</p>
+                </li>
+            </ul>
+
+            <h3>2024</h3>
+            <ul class="event-list">
+                <li class="event-item">
+                    <span class="event-date">Oct 26</span>
+                    <h4>Seminar on GRE & US Scholarships + English Olympiad 2024</h4>
+                    <p><strong>Speaker:</strong> Nahid Hasan (GRE 329)</p>
+                </li>
+                 <li class="event-item">
+                    <span class="event-date">Nov 5</span>
+                    <h4>Fresh Start Internship Program, Singer Bangladesh Ltd</h4>
+                    <p>Global Internship (Thailand, South Africa, etc.)</p>
+                </li>
+                <li class="event-item">
+                    <span class="event-date">Dec 8</span>
+                    <h4>Workshop: University Selection & Mailing Professors</h4>
+                    <p><strong>Speaker:</strong> Dr. Syed Mosiur Rahaman Kiron | <strong>Organizer:</strong> DUET CRC</p>
+                </li>
+            </ul>
+        </div>
+    </section>
+
+    <!-- Certifications Section -->
+    <section id="certifications" class="container">
+        <h2 class="section-title">My Certifications</h2>
+        <div class="certifications-grid">
+            <div class="certification-item">
+                <h3>Research Presenter – ICSHSD 2025</h3>
+                <p class="issuer">Faculty of Science, DUET, Gazipur</p>
+                <p>October 2025</p>
+            </div>
+            <div class="certification-item">
+                <h3>Energy Economics, Environment, and Policy</h3>
+                <p class="issuer">Asian Development Bank Institute</p>
+                <p>April 2025</p>
+            </div>
+            <div class="certification-item">
+                <h3>Green Investments: Renewable Energy</h3>
+                <p class="issuer">Asian Development Bank Institute</p>
+                <p>April 2025</p>
+            </div>
+            <div class="certification-item">
+                <h3>Engineering for New Energy Job Simulation</h3>
+                <p class="issuer">APA Group - Forage</p>
+                <p>March 2025</p>
+            </div>
+            <div class="certification-item">
+                <h3>GE Aerospace - Explore Electrical Engineering</h3>
+                <p class="issuer">Forage</p>
+                <p>March 2025</p>
+            </div>
+            <div class="certification-item">
+                <h3>Siemens Mobility - Operations Industrial Engineer</h3>
+                <p class="issuer">Forage</p>
+                <p>March 2025</p>
+            </div>
+            <div class="certification-item">
+                <h3>Positive Communication Skills for Leaders</h3>
+                <p class="issuer">MindLuster</p>
+                <p>December 2024</p>
+            </div>
+            <div class="certification-item">
+                <h3>Communication for Team Collaboration</h3>
+                <p class="issuer">MindLuster</p>
+                <p>October 2024</p>
+            </div>
+            <div class="certification-item">
+                <h3>AutoCAD Electrical House Wiring</h3>
+                <p class="issuer">MindLuster</p>
+                <p>September 2024</p>
+            </div>
+            <div class="certification-item">
+                <h3>Power Plant Generator</h3>
+                <p class="issuer">MindLuster</p>
+                <p>September 2024</p>
+            </div>
+            <div class="certification-item">
+                <h3>Digital Electronics Basics</h3>
+                <p class="issuer">MindLuster</p>
+                <p>September 2024</p>
+            </div>
+            <div class="certification-item">
+                <h3>Electrical Thumb Rules for Beginners</h3>
+                <p class="issuer">MindLuster</p>
+                <p>September 2024</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact" class="container">
+        <h2 class="section-title">Get In Touch</h2>
+        <p>I'm always open to discussing new projects, collaborations, or opportunities. Feel free to reach out!</p>
+
+        <div class="contact-info">
+            <div class="contact-item">
+                <i class="fas fa-envelope"></i>
+                <p>Email Me</p>
+                <a href="mailto:sifatduet01@gmail.com">sifatduet01@gmail.com</a>
+            </div>
+            <div class="contact-item">
+                <i class="fas fa-phone-alt"></i>
+                <p>Call Me</p>
+                <a href="tel:+8801834413205">+8801834413205</a>
+            </div>
+            <div class="contact-item">
+                <i class="fas fa-map-marker-alt"></i>
+                <p>Location</p>
+                <p>Gazipur, Dhaka, Bangladesh</p>
+            </div>
+        </div>
+
+        <div class="social-links">
+            <a href="https://www.linkedin.com/in/rashidul-islam-sifat" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://github.com/SIFAT01DUET" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+            <a href="https://www.researchgate.net/profile/Rashidul-Sifat" target="_blank" aria-label="ResearchGate"><i class="ai ai-researchgate"></i></a>
+            <a href="https://www.facebook.com/sifat89duet" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://x.com/sifatduet89" target="_blank" aria-label="Twitter X"><i class="fab fa-x-twitter"></i></a>        
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="footer">
+        <p>&copy; 2024 Rashidul Islam Sifat. All rights reserved.</p>
+    </footer>
+
+    <script>
+        // Smooth scrolling for navigation links
+        document.querySelectorAll('.nav-links a').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                document.querySelector(this.getAttribute('href')).scrollIntoView({
+                    behavior: 'smooth'
+                });
+
+                // Optional: Add active class to current nav item
+                document.querySelectorAll('.nav-links a').forEach(link => {
+                    link.classList.remove('active');
+                });
+                this.classList.add('active');
+            });
+        });
+
+        // Optional: Highlight active nav link on scroll
+        const sections = document.querySelectorAll('section');
+        const navLinks = document.querySelectorAll('.nav-links a');
+
+        window.addEventListener('scroll', () => {
+            let current = '';
+            sections.forEach(section => {
+                const sectionTop = section.offsetTop;
+                const sectionHeight = section.clientHeight;
+                if (pageYOffset >= sectionTop - sectionHeight / 3) { /* Adjust offset as needed */
+                    current = section.getAttribute('id');
+                }
+            });
+
+            navLinks.forEach(link => {
+                link.classList.remove('active');
+                if (link.getAttribute('href').includes(current)) {
+                    link.classList.add('active');
+                }
+            });
+        });
+
+        // Initialize active link on page load if hash exists
+        document.addEventListener('DOMContentLoaded', () => {
+            if (window.location.hash) {
+                const targetId = window.location.hash;
+                document.querySelector(targetId).scrollIntoView({ behavior: 'smooth' });
+                navLinks.forEach(link => {
+                    if (link.getAttribute('href') === targetId) {
+                        link.classList.add('active');
+                    } else {
+                        link.classList.remove('active');
+                    }
+                });
+            } else {
+                // Default to home link if no hash
+                document.querySelector('.nav-links a[href="#hero"]').classList.add('active');
+            }
+        });
+
+    </script>
+</body>
+</html>```
