--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@
             <img src="profile.jpg" alt="Rashidul Islam Sifat" class="profile-pic">
         </div>
         <h1>Hi, I'm <span>Rashidul Islam Sifat</span></h1>
-        <p>Aspiring Electrical and Electronic Engineer, Robotics Enthusiast</p>
+        <p>Aspiring Electrical Engineer, Robotics Enthusiast, AI Engineer</p>
         <p class="subtitle">Passionate about AI, robotics, and sustainable energy solutions, seeking to apply my skills in real-world engineering projects.</p>
         <a href="https://drive.google.com/file/d/1P-3qKDQPKFiw9gSTo4IwDhcWKWWZrSPL/view?usp=sharing" target="_blank" class="hero-button">Download My Resume <i class="fas fa-download"></i></a>
     </section>
